maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: too many arguments for constructor Array: (_length: Int)Array[Int]
      	return new Array[Int](x, y)
               ^JediEscaper:6: error: type mismatch;
 found   : Unit
 required: Array[Int]
  for (x <- 0 to xMax) {
         ^